##
## File:        Makefile.am
## Package:     Babel Examples
## Copyright:   (c) 2001, 2005 Lawrence Livermore National Security, LLC
## Revision:    $Revision: 6171 $
## Modified:    $Date: 2007-10-08 16:39:28 -0700 (Mon, 08 Oct 2007) $
## Description: automake makefile for all babel examples
##

if SUPPORT_SHARED
SUBDIRS = hello cca 
else
SUBDIRS = hello
endif
